# ModelAuditorCore

./: .gitignore  README.md  pyproject.toml  setup.py  test.py  train.py
model_auditor/: __init__.py  auditor.py  distribution_shift.py  metric.py  requirements.txt
model_auditor/metrics/: __init__.py  detection_metrics.py  metrics_reloaded.py  multi_label_metrics.py  segmentation_metrics.py
model_auditor/shifts/: __init__.py  image_shifts.py
