[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_auditor"
version = "0.2.2"
description = "A library for auditing ML models under distribution shifts"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Lukas Kuhn", email = "lukas.kuhn@dkfz-heidelberg.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "onnxruntime",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "rich",
    "MetricsReloaded @ git+https://github.com/csudre/MetricsReloaded.git",
]

[project.urls]
Homepage = "https://github.com/lukaskuhn/ModelAuditorCore"
Repository = "https://github.com/lukaskuhn/ModelAuditorCore"
Issues = "https://github.com/lukaskuhn/ModelAuditorCore/issues"

[tool.setuptools]
packages = {find = {exclude = ["build*", "dist*", "*.egg-info", "venv*"]}}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]